# optimization-of-Google-board

./: CMakeLists.txt  compile.sh  index.cfg
data/: dataset.txt
data/test/: test.txt
indexing/: myqueue.hpp  processing.cpp  processing.h
parser/: parser.cpp  parser.h
prediction/: prediction.cpp  prediction.h
results/: out.txt  prob.txt
src/: main.cpp  main.h
